# calmk

./: CMakeLists.txt  README.md
include/: config.h  log.h  singleton.h  util.h
src/: CMakeLists.txt  config.cc  log.cc  util.cc
test/: CMakeLists.txt  test_config.cc  test_log.cc
